fix: validation to create category find by parent